feature: adiciona viewmodel na activity de customerbilldetails e refatora identação do código

--- a/app/src/main/res/layout/activity_customers_screen.xml
+++ b/app/src/main/res/layout/activity_customers_screen.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".presentation.customers.CustomersBillsScreen">
+    tools:context=".presentation.customers.CustomersBillsActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:scrollbars="vertical"
