--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.orderdetails.OrderDetailsActivity">
+    tools:context=".presentation.orderitemdetails.OrderItemDetailsActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
