--- a/app/src/main/res/layout/fragment_customers_bills.xml
+++ b/app/src/main/res/layout/fragment_customers_bills.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".presentation.customers.CustomersBillsActivity">
+    tools:context=".presentation.customers.CustomersBillsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:scrollbars="vertical"
         android:padding="16dp"
-        app:spanCount="200"
         android:clipToPadding="false"
         android:id="@+id/customerBillRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
