--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_graph">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/customersBillsFragment">
 
+    <fragment
+        android:id="@+id/customersBillsFragment"
+        android:name="com.example.splitthebill.presentation.customers.CustomersBillsFragment"
+        android:label="fragment_customers_bills"
+        tools:layout="@layout/fragment_customers_bills" >
+        <action
+            android:id="@+id/action_customersBillsFragment_to_customerBillDetailsFragment"
+            app:destination="@id/customerBillDetailsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/customerBillDetailsFragment"
+        android:name="com.example.splitthebill.presentation.customerdetails.CustomerBillDetailsFragment"
+        android:label="fragment_customer_bill_details"
+        tools:layout="@layout/fragment_customer_bill_details" >
+        <action
+            android:id="@+id/action_customerBillDetailsFragment_to_orderItemDetails"
+            app:destination="@id/orderItemDetails" />
+        <argument
+            android:name="customerId"
+            app:argType="integer" />
+        <argument
+            android:name="type"
+            app:argType="string"
+            android:defaultValue="create" />
+    </fragment>
+    <fragment
+        android:id="@+id/orderItemDetails"
+        android:name="com.example.splitthebill.presentation.orderitemdetails.OrderItemDetails"
+        android:label="fragment_order_item_details"
+        tools:layout="@layout/fragment_order_item_details" />
 </navigation>
