feature: implementa navegação para página de detalhes e adiciona orderItem

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="black">#FF000000</color>
     <color name="text_secondary">#FF656565</color>
+    <color name="primary">#FF4178F6</color>
     <color name="border">#FFEAEAEA</color>
 </resources>
