--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,7 +12,11 @@
         tools:layout="@layout/fragment_customers_bills" >
         <action
             android:id="@+id/action_customersBillsFragment_to_customerBillDetailsFragment"
-            app:destination="@id/customerBillDetailsFragment" />
+            app:destination="@id/customerBillDetailsFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/customerBillDetailsFragment"
