feature: adiciona carregamento dos dados na página de detalhes

--- a/app/src/main/res/layout/fragment_customer_bill_details.xml
+++ b/app/src/main/res/layout/fragment_customer_bill_details.xml
@@ -32,7 +32,7 @@
 
     <Button
         android:backgroundTint="@color/primary"
-        android:id="@+id/button"
+        android:id="@+id/confirmButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Confirmar"
