--- a/app/src/main/res/layout/fragment_customer_bill_details.xml
+++ b/app/src/main/res/layout/fragment_customer_bill_details.xml
@@ -26,7 +26,7 @@
         android:layout_height="0dp"
         android:clipToPadding="false"
         android:scrollbars="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/confirmButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/customerNameEditText" />
 
