--- a/app/src/main/res/layout/customer_bill_item.xml
+++ b/app/src/main/res/layout/customer_bill_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:padding="12dp"
     android:layout_marginBottom="12dp"
     android:layout_width="match_parent"
@@ -13,6 +14,7 @@
         android:layout_height="40dp"
         android:background="@drawable/customer_bill_item_initial_background"
         app:circularflow_radiusInDP="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
     <TextView
@@ -26,35 +28,49 @@
         android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-    <TextView
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/customerInitialView"
-        android:id="@+id/customerNameText"
-        android:text="Juan Lucas Rossi"
-        android:layout_marginStart="12dp"
-        android:textSize="14sp"
-        android:textColor="@color/black"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
-        app:layout_constraintTop_toBottomOf="@id/customerNameText"
-        app:layout_constraintStart_toEndOf="@id/customerInitialView"
-        android:id="@+id/customerOrdersQuantityTxt"
-        android:text="20 pedidos"
-        android:layout_marginStart="12dp"
-        android:textSize="12sp"
-        android:textColor="@color/text_secondary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
     <TextView
-        app:layout_constraintTop_toBottomOf="@id/customerNameText"
-        app:layout_constraintStart_toEndOf="@id/customerOrdersQuantityTxt"
-        android:id="@+id/customerTotalPrice"
-        android:text="Total: R$ 390,99"
-        android:layout_marginStart="12dp"
-        android:textSize="12sp"
-        android:textColor="@color/text_secondary"
+        android:id="@+id/customerNameText"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:text="Juan Lucas Rossi"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        app:layout_constraintStart_toEndOf="@id/customerInitialView"
+        app:layout_constraintTop_toTopOf="@+id/customerInitialView" />
+
+    <TextView
+        android:id="@+id/customerOrdersQuantityTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="3dp"
+        android:text="20 pedidos"
+        android:textColor="@color/text_secondary"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@+id/customerInitialView"
+        app:layout_constraintStart_toEndOf="@id/customerInitialView"
+        app:layout_constraintTop_toBottomOf="@id/customerNameText" />
+
+    <TextView
+        android:id="@+id/customerTotalPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:text="Total: R$ 390,99"
+        android:textColor="@color/text_secondary"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@+id/customerInitialView"
+        app:layout_constraintStart_toEndOf="@id/customerOrdersQuantityTxt"
+        app:layout_constraintTop_toBottomOf="@id/customerNameText" />
+
+    <ImageButton
+        android:id="@+id/deleteButton"
+        android:src="@android:drawable/ic_menu_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
