feature: implementa deleção de orderItem

--- a/app/src/main/res/layout/customer_bill_item.xml
+++ b/app/src/main/res/layout/customer_bill_item.xml
@@ -72,5 +72,6 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="Delete item" />
 </androidx.constraintlayout.widget.ConstraintLayout>
