feature: implementa validação de campos

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,7 +25,11 @@
         tools:layout="@layout/fragment_customer_bill_details">
         <action
             android:id="@+id/action_customerBillDetailsFragment_to_orderItemDetails"
-            app:destination="@id/orderItemDetails" />
+            app:destination="@id/orderItemDetails"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
         <argument
             android:name="customerId"
             app:argType="integer" />
