--- a/app/src/main/res/layout/fragment_split_result.xml
+++ b/app/src/main/res/layout/fragment_split_result.xml
@@ -5,10 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.customers.CustomersBillsFragment">
+    tools:context=".presentation.splitresult.SplitResultFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/customerBillRecyclerView"
+        android:id="@+id/splitResultsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:clipToPadding="false"
@@ -18,28 +18,13 @@
         app:layout_constraintBottom_toTopOf="@+id/confirmButton"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/addCustomerButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="24dp"
-        android:backgroundTint="@color/primary"
-        android:contentDescription="Adicionar novo cliente"
-        android:src="@android:drawable/ic_menu_add"
-        app:elevation="6dp"
-        app:fabSize="normal"
-        app:layout_constraintBottom_toTopOf="@+id/confirmButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:pressedTranslationZ="12dp" />
-
     <Button
         android:id="@+id/confirmButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
         android:backgroundTint="@color/primary"
-        android:text="Dividir"
+        android:text="Finalizar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
