--- a/app/src/main/res/layout/customer_bill_item.xml
+++ b/app/src/main/res/layout/customer_bill_item.xml
@@ -57,13 +57,24 @@
         android:id="@+id/customerTotalPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="1dp"
         android:text="Total: R$ 390,99"
         android:textColor="@color/text_secondary"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/customerInitialView"
         app:layout_constraintStart_toEndOf="@id/customerOrdersQuantityTxt"
-        app:layout_constraintTop_toBottomOf="@id/customerNameText" />
+        app:layout_constraintTop_toBottomOf="@+id/customerNameText" />
+
+    <TextView
+        android:id="@+id/orderItemsNamesTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:text="Coca, Marmita, carne"
+        android:textColor="@color/text_secondary"
+        android:textSize="12sp"
+        app:layout_constraintStart_toEndOf="@+id/customerInitialView"
+        app:layout_constraintTop_toBottomOf="@+id/customerOrdersQuantityTxt" />
 
     <ImageButton
         android:id="@+id/deleteButton"
